# xpose

./: Cargo.toml  Makefile  README.md  rescue-windows.sh  xpose.1
docs/: VDESK.md
src/: animation.rs  capture.rs  config.rs  connection.rs  desktop_bar.rs  error.rs  input.rs  layout.rs  main.rs  renderer.rs  state.rs  window_finder.rs  xdeskie.rs
src/desktop/: manager.rs  mod.rs  state.rs
