[package]
name = "xpose"
version = "0.1.0"
edition = "2021"
description = "Expose-like window switcher for X11/TWM"
license = "MIT"

[dependencies]
x11rb = { version = "0.13", features = ["composite", "render", "damage"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
